<resources>
    <string name="app_name">Interview Byte</string>
    <string name="complex1">Big O notation is the most widely used method which describes algorithm complexity – the execution time required or the space used in memory or in disk by an algorithm. Often in exams or interviews, you will be asked some questions about algorithm complexity in the following form. For an algorithm that uses a data structure of size n, what is the runtime complexity or space complexity of the algorithm? The answer to such questions often uses big O notations to describe the algorithm complexity, such as O(1), O(n), O(n^2) or O(log(n)).</string>
    <string name="complex1heading">An easy way to understand algorithm complexity and big O notation</string>
    <string name="complexhead2">Big O for time complexity</string>
    <string name="complexcontent2">Here we don’t want to discuss big O in a mathematical way. Basically, when analyzing the time complexity for an algorithm, big O notation is used to describe the rough estimate of the number of “steps” to complete the algorithm. Let’s take the following example:</string>
    <string name="complexcontent3">Here let’s assume that doSomething() takes C steps to complete. The whole fun(n) method has 4 parts. What is the time complexity of each part for different parameters n ?\n For part1, it does doSomething() so it takes constant C steps. Here C is independent to the parameter n. When the time complexity is independent to the parameter, we use O(1) to mark it.
        \n
        \nFor part2, it does doSomething n times. Each time it takes C steps. So in total, it takes C x n steps to complete part2. Then as described above, we use O(1) to complete the C steps. Then for C x n, the complexity becomes n x O(1). Here, an important rule is that a x O(n) equals O(an). In such case, n x O(1) = O(n). So the time complexity of part2 is O(n).
        \n
        \nFor part3, it has two loops. The inner loop is exactly like part2. The outer loop does part2 n times again so the time complexity for part3 is n x O(n) which is O(n^2).
        \n
        \nFor part4, it takes exactly 1 step to return. So the time complexity is O(1).
        \n
        \nThen what is the total time complexity of the whole fun(n)? It is easy, we just need to add up the time complexity of all the 4 parts:
        \n
        \nO(1) + O(n) + O(n^2) + O(1)
        \n
        \nNow let’s assume n becomes very very large. For part1 and part4, they still take constant C+1 steps so the time running them could be ignored by part2 and part3, as now part2 and part3 take much longer time than part 1 and 4. Now if we compare part 2 and part 3. When n is 1, both part2 and part3 take C steps. When n is 3, part 2 takes 3C steps while part 3 takes 9C steps. When n is 1000, part 2 needs 1000C steps but part3 takes 1000000C steps! As n increases, the time complexity of part3 increases much quicker than part 2. When n becomes extremely large, the time of part2 can be ignored by the time of part3.
        \n
        \nSo here is another rule, when add up big O notations, the notation with slower increase speed could be ignored by the notation with faster increase speed. As we could see, O(1) does not increase at all so it could be ignored by O(n). O(n) is slower than O(n^2) so it could be ignored by O(n^2). Therefore, the complexity of the whole fun() is O(n^2)</string>
    <string name="complexhead3">Rules summary of big O notations</string>
        <string name="complexcontent4"><![CDATA[From the above examples, we could summarize the following rules:

    \nFor multiplying two O notations, O(A) and O(B), the result is O(AB). For example:
    \n
    \nO(1) x O(n) = O(n).
    \n
    \nO(n) x O(n) = O(n^2).
    \n
    \nFor adding two O notations, O(A) and O(B), the result is to choose the one with the faster increase speed. For example:
    \n
    \nO(1) + O(n) = O(n).
    \n
    \nO(n) + O(n^2) = O(n^2).
    \n
    \nO(1) + O(n) + O(n^2) = O(n^2).
    \n
    \nHere is the comparison of the increase speed of different O notations:
    \n
    \nO(1) <  O(log(n)) <  O(n) < O(nlog(n)) < O(n^2)]]></string>
    <string name="complexhead4">How to use big O notation to compare algorithm complexity and why</string>
    <string name="complexcontent5">When comparing different algorithms, we often say the one with a “smaller” big O notation is more efficient. However, there are situations that algorithms with “larger” big O is faster. For example, there are two algorithms f1(n) and f2(n). f1(n) takes 100 steps and f2(n) takes n steps so f1(n) is O(1) and f2(n) is O(n). When n is less than 100, say n is 50, f1(n) takes 100 steps. f2(n) takes 50 steps so f2(n) is more efficient than f1(n). However, when n goes up to 10000, f2(n) takes 10000 steps while f1(n) takes only 100 steps so f1(n) becomes way more efficient. As the nature of large scale data in computer engineering, big O compares algorithms in the cases when the data is very large.</string>
    <string name="complexhead5">Big O for space complexity</string>
    <string name="Complexitycode1"><![CDATA[
    \nvoid fun(int n) {
 \n
  \n \t\t// part1
  \n\t\tdoSomething();
  \n
  \n\t\t// part2
  \n\t\tfor(int j=0; j < n; j++)
   \n\t\t\tdoSomething();
    \n
  \n\t\t// part3
  \n\t\tfor(int i=0; i <  n; i++)
    \n\t\t\tfor(int j=0; j < n; j++)
      \n\t\t\t\tdoSomething();
      \n
  \n\t\t// part4
  \n\t\treturn;\n
}]]></string>
    <string name="complexcontent6"><![CDATA[It is easier to understand using big O to estimate space complexity as it is more concrete. For example, in an algorithm, we need to create an array of size n to store the temporary results before getting the final result. If we assume that the size of the element in the array is a constant C which is independent to n, the space complexity for using the array is Cn which is O(n) x O(C) = O(n) x O(1) = O(n).
        \n\nWhen comparing different algorithms, we often compare how much “extra” space complexity is needed to solve the problem. For example, as an algorithm that needs an extra array of size n is not as good as the one which only needs two variables, O(1) space complexity is more efficient than O(n).]]></string>
    <string name="insertionsorthead">INSERTION SORT</string>
    <string name="insertiondesc">Insertion sort is a simple sorting algorithm that builds the final sorted array (or list) one item at a time. It is much less efficient on large lists than more advanced algorithms such as quicksort, heapsort, or merge sort. However, insertion sort provides several advantages.\n\nThe array is searched sequentially and unsorted items are moved and inserted into the sorted sub-list (in the same array). This algorithm is not suitable for large data sets as its average and worst case complexity are of Ο(n2), where n is the number of items.\n</string>
    <string name="insertioncode1"><![CDATA[for i ← 1 to length(A)
\n\t\t\tj ← i
\n\t\t\twhile j > 0 and A[j-1] > A[j]
\n\t\t\t\t\t\tswap A[j] and A[j-1]
\n\t\t\t\t\t\tj ← j - 1
\n\t\t\tend while
\n\tend for]]></string>
    <string name="complexityinsertion">\n
        Best Case:Ω(n)\n
        Average Case:Θ(n^2)\n
        Worst Case:O(n^2)\n
        Space Complexity:\n
        Worst Case:	O(1)</string>
<string name="complexityselection">\n
        Best Case:Ω(n^2)\n
        Average Case:Θ(n^2)\n
        Worst Case:	O(n^2)\n
        Space Complexity:\n
        Worst Case:	O(1)</string>
    <string name="heaphead">HEAP SORT</string>
    <string name="heapdesc1">Heap Sort is one of the best sorting methods being in-place and with no quadratic worst-case scenarios. Heap sort algorithm is divided into two basic parts :\n\n

1.Creating a Heap of the unsorted list.\n
2.Then a sorted array is created by repeatedly removing the largest/smallest element from the heap, and inserting it into the array. The heap is reconstructed after each removal.\n\n

What is a Heap ?\n

\nHeap is a special tree-based data structure, that satisfies the following special heap properties :\n
\n
1.Shape Property : Heap data structure is always a Complete Binary Tree, which means all levels of the tree are fully filled.\n</string>
    <string name="heapdesc2">2.Heap Property : All nodes are either [greater than or equal to] or [less than or equal to] each of its children. If the parent nodes are greater than their children, heap is called a Max-Heap, and if the parent nodes are smalled than their child nodes, heap is called Min-Heap.</string>
    <string name="heaphead2">How Heap Works</string>
    <string name="heapdesc3">Initially on receiving an unsorted list, the first step in heap sort is to create a Heap data structure(Max-Heap or Min-Heap). Once heap is built, the first element of the Heap is either largest or smallest(depending upon Max-Heap or Min-Heap), so we put the first element of the heap in our array. Then we again make heap using the remaining elements, to again pick the first element of the heap and put it into the array. We keep on doing the same repeatedly until we have the complete sorted list in our array.\n\n
\n
In the below algorithm, initially heapsort() function is called, which calls buildheap() to build heap, which inturn uses satisfyheap() to build the heap.</string>
<string name="heapcode1"><![CDATA[\nMaxHeapify(A, i)
            \n{
			\n	\t\tl = left(i)
			\n	\t\tr = right(i)
            \nif l <= heap-size[A] and A[l] > A[i]
            \n		\t\tlargest = l
            \nelse
			\n		\t\tlargest = i
            \nif r <= heap-size[A] and A[r] > A[largest]
            \n 	 	\t\tlargest = r
            \n if largest != i
            \n 		\t\tswap A[i] with A[largest]
            \n MaxHeapify(A, largest)
            \n}
            \n\n
            \nBuildMaxHeap(A)
            \n{
            \n		\t\theap-size[A] = length[A]
            \n\t\tfor i = |length[A]/2| downto 1
            \n		 \t\t\t\tMaxHeapify(A, i)
			\n}
            \n\n
            \nHeapSort(A)
            \n{
            \n		\t\tBuildMaxHeap(A)
            \n\t\tfor i = length[A] downto 2
            \n		\t\t\t\tswap A[1] with A[i]
            \n	\t\theap-size[A] = heap-size[A] – 1
            \n	\t\tMaxHeapify(A, 1)
            \n}]]></string>
    <string name="binaryhead">Binary Search</string>
    <string name="binarydesc"><![CDATA[Binary search is a very useful searching algorithm. In binary search, we look for an element x in a sorted array. Instead of searching the list in sequence, Binary Search starts by searching the middle point of the array. If the element is the target we are looking for, than return the element. If the middle element is less than the target, we know the target is in the left half so we could use the same method to search the left half. Otherwise we search the right half. By repeating this process, we could get the element without checking every element in the list.
The time complexity for Binary search is O(log(n)).\n\nHere\'s the sample implementation in Java.\n]]></string>
    <string name="binarycode"><![CDATA[\nint binarySearch(int[] arr,int target)
\n{
\n\t\t\t\tint low=0;
\n\t\t\t\tint high=arr.length-1;
\n\t\t\t\tint mid;
\n\t\t\t\twhile(low <= high)
\n\t\t\t\t{
\n\\t\t\t\t\t\t\t\ttmid =(low+high)/2;
\n\t\t\t\t\t\t\t\tif(arr[mid]< target)
\n\t\t\t\t\t\t\t\t{
\n\t\t\t\t\t\t\t\t\t\t\t\tlow=mid+1;
\n\t\t\t\t\t\t\t\t}
\n\t\t\t\t\t\t\t\telse if(arr[mid]>x)
\n\t\t\t\t\t\t\t\t{
\n\t\t\t\t\t\t\t\t\t\t\t\thigh=mid-1;
\n\t\t\t\t\t\t\t\t}
\n\t\t\t\t\t\t\t\telse
\n\t\t\t\t\t\t\t\t{
\n\t\t\t\t\t\t\t\t\t\t\t\treturn mid;
\n\t\t\t\t\t\t\t\t}
\n}// return -1 if not found return-1;}]]> </string>
    <string name="binarydesc2">The below picture illustrates the steps of binary search.</string>
</resources>