<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    android:orientation="vertical"
    android:layout_margin="5dp"
    tools:context="galab.example.com.interviewbyte.algolist1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_algolist1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/complex1heading"
                android:textSize="22sp"
                android:typeface="serif"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textAlignment="gravity"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/complex1"
                android:textAlignment="gravity"
                android:textSize="18sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/complexhead2"
                android:textSize="22sp"
                android:typeface="serif"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_gravity="start"
                android:textAlignment="textStart"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />


            <TextView
                android:id="@+id/complexcontent2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="gravity"
                android:textColor="#000000"
                android:text="@string/complexcontent2"
                android:textSize="18sp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#1d1f2e"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/complexcode1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="gravity"
                    android:textSize="16sp"
                    android:textColor="#ffffff"
                    android:text="@string/Complexitycode1"
                    android:layout_margin="5dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/complexcontent3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="gravity"
                android:textColor="#000000"
                android:text="@string/complexcontent3"
                android:textSize="18sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/complexhead3"
                android:textSize="22sp"
                android:typeface="serif"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_gravity="start"
                android:textAlignment="textStart"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />
            <TextView
                android:id="@+id/complexcontent4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="gravity"
                android:textColor="#000000"
                android:text="@string/complexcontent4"
                android:textSize="18sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/complexhead4"
                android:textSize="22sp"
                android:typeface="serif"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_gravity="start"
                android:textAlignment="textStart"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />
            <TextView
                android:id="@+id/complexcontent5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="gravity"
                android:textColor="#000000"
                android:text="@string/complexcontent5"
                android:textSize="18sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/complexhead5"
                android:textSize="22sp"
                android:typeface="serif"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_gravity="start"
                android:textAlignment="textStart"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:id="@+id/complexcontent6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="gravity"
                android:textColor="#000000"
                android:text="@string/complexcontent6"
                android:textSize="18sp"
                />
        </LinearLayout>

    </ScrollView>


</LinearLayout>
