<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    android:orientation="vertical"
    android:layout_margin="5dp"
    tools:context="layout.Binary_search">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/binaryhead"
                android:textSize="20sp"
                android:typeface="serif"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textAlignment="gravity"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/binarydesc"
                android:textAlignment="gravity"
                android:textColor="#000000"
                android:textSize="18sp"
                />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="#101328">
                <TextView
                    android:id="@+id/insertioncode1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/binarycode"
                    android:textAlignment="gravity"
                    android:textSize="18sp"
                    android:textColor="#ffffff"
                    android:layout_gravity="start" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/binarydesc2"
                android:textAlignment="gravity"
                android:textColor="#000000"
                android:textSize="18sp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/binarysearch"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Complexity"
                android:textSize="20sp"
                android:typeface="serif"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textAlignment="gravity"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/complexityselection"
                android:textAlignment="gravity"
                android:textColor="#000000"
                android:textSize="18sp"
                />



        </LinearLayout>
    </ScrollView>


</LinearLayout>