<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    android:orientation="vertical"
    android:layout_margin="5dp"
    tools:context="layout.Insertion_Sort">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insertionsorthead"
                android:textSize="20sp"
                android:typeface="serif"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textAlignment="gravity"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insertiondesc"
                android:textAlignment="gravity"
                android:textSize="18sp"
                android:typeface="normal"
                android:textColor="#000000" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/insertionsort"
                android:cropToPadding="false"
                android:focusableInTouchMode="true"
                android:focusable="true"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Algorithm"
                android:textSize="20sp"
                android:typeface="serif"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textAlignment="gravity"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="#0d1229">
                <TextView
                    android:id="@+id/insertioncode1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/insertioncode1"
                    android:textAlignment="gravity"
                    android:textSize="18sp"
                    android:textColor="#ffffff"
                    android:layout_gravity="start" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Complexity"
                android:textSize="20sp"
                android:typeface="serif"
                android:textColor="#000000"
                android:textAlignment="gravity"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/complexityinsertion"
                android:textAlignment="gravity"
                android:textColor="#000000"
                android:textSize="18sp"
                />



        </LinearLayout>
    </ScrollView>


</LinearLayout>